@@ -108,7 +108,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
   private static JP1Frame frame = null;
 
   /** Description of the Field. */
-  public final static String version = "v2.03 Alpha 27a";
+  public final static String version = "v2.03 Alpha 27b";
 
   public enum Use
   {
@@ -2875,6 +2875,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
       if ( use == Use.EXPORT )
       {
         remoteConfig.exportIR( file );
+        updateRecentFiles( file );
       }
       else
       {
